--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="#" class="menu__link">Home</a> 
               </li>
               <li class="menu__list"> 
-                <a href="#features" class="menu__link">Books</a> 
+                <a href="#featured" class="menu__link">Books</a> 
               </li>
               <li class="menu__list"> 
                <a href="" class="menu__link no-cursor">Contacts</a>
@@ -105,7 +105,7 @@
           </div>
         </section>
 
-      <section id="features">
+      <section id="featured">
             <div class="container">
                 <div class="row">
                     <h2 class="section__title">
